Fixed an issue where the footer was not aligning properly on mobile.

--- a/project-two/src/styles/App.css
+++ b/project-two/src/styles/App.css
@@ -69,4 +69,33 @@ main {
     gap: 20px;
 }
 
+.footer{
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height:0;
+    font-size: 25px;
+    text-align: center;
+    padding-bottom: 0;
+ }
+
+ .link, .author {
+    margin: 0;
+    padding: 0;
+    bottom: 0;
+    height: 0;
+    position: absolute;
+    font-size: 25px;
+    color: rgb(0, 157, 255);
+ }
+
+ #smaller {
+    font-size: 10px;
+    margin: 20px;
+ }
+
+
 }
