--- a/project-two/src/styles/navbar.css
+++ b/project-two/src/styles/navbar.css
@@ -18,11 +18,7 @@ a {
     text-align: center;
     gap: 5px;
     padding: 30px;
-    /* padding-bottom: 5px; */
-    /* border: 2px solid rgba(0, 0, 0, 0.12);
-    border-radius: 5px; */
     background-image: linear-gradient(90deg, #410076, #8820dd);
-    /* background-color: rgba(190, 44, 44, 0.315); */
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: blueviolet;
 }
@@ -65,18 +61,23 @@ font-size: 25px;
 
 @media (max-width: 820px){
 
-    button {
-        margin: 2px;
-        padding: 2px;
+button {
+    margin: 2px;
+    padding: 2px;
 }
+
+a {
+    font-size: 40px;
+}
+
 .full-nav {
-    width: 80%;
-    height: 40%;
+    width: 50%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    gap: 5px;
+    gap: 10px;
     padding: 5px;
     border: 2px solid rgba(0, 0, 0, 0.12);
     border-radius: 5px;
@@ -86,7 +87,6 @@ font-size: 25px;
     .logo {
         display: flex;
         align-items: center;
-        font-size: 40px;
         color: rgb(38, 228, 228);
     }
     
